# to-chatgpt

./: .gitignore  Dockerfile  LICENSE  README.md  app_sync.py  pyproject.toml
to_chatgpt/bard/: __init__.py
to_chatgpt/common/: __init__.py  constant.py  error.py  log.py  message.py
to_chatgpt/new_bing/: __init__.py
